--- a/VIM/index.html
+++ b/VIM/index.html
@@ -2,10 +2,11 @@
         <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>这是第一个网页</title>
-        <script src="jquery.js" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript" charset="utf-8">
+<link rel="stylesheet" href="./css/master.css" type="text/css" media="screen" title="no title" charset="utf-8">
+<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" charset="utf-8">
                 console.log('HelloWorld');
-            </script>
+       </script>
         </head>
         <div class="myNav">
             <ul>
